# PixSorter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
packaging/: PixSorter.spec  PixSorter_onedir.spec  PixSorter_onefile.spec
scripts/: build_onedir.ps1  build_onefile.ps1  dev_run.ps1  download_models.py  sync_assets.py
src/pixsorter/: __main__.py  app.py
src/pixsorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pixsorter/config/: __init__.py  defaults.py  schemas.py
src/pixsorter/infra/: __init__.py  logging.py  resources.py
src/pixsorter/ml/: __init__.py  clip_embedder.py  eyes.py
src/pixsorter/pipeline/: __init__.py  planner.py  worker.py
src/pixsorter/ui/: main_window.py  styles.py  widgets.py
src/pixsorter/vision/: __init__.py  composition.py  grouping.py  io.py  motion_blur.py  orb.py  saliency.py  scoring.py  sharpness.py  straightness.py
tests/: test_grouping.py  test_orb.py  test_resource_path.py  test_scoring.py
